--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,2 +1,2 @@
-<div #joystickContainer style="position: absolute; bottom: 0; left: 0;"></div>
+<div #joystickContainer class="joystick"></div>
 <canvas #canvas></canvas>
