--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -4,3 +4,14 @@ canvas {
     height: 100vh;
     background-color: #000;
   }
+
+  .joystick{
+    bottom: 34px;
+    left: 3px;
+    position: absolute !important;
+    touch-action: none;
+    width: 200px;
+    height: 200px;
+    background: #ffffff26;
+    border-radius: 50%;
+  }
