--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,2 +1,5 @@
 <div #joystickContainer class="joystick"></div>
+<div class="porto" routerLink="/portofolio">
+ Go to Protofolio
+</div>
 <canvas #canvas></canvas>
