update game rpg

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -16,16 +16,22 @@ canvas {
     border-radius: 50%;
   }
 
+  .box{
+    position: absolute;
+    top: 9px;
+    left: 7px;
+    display: flex;
+  }
+
 
   .porto{
     width: fit-content;
     background: #3d6303;
-    position: absolute;
+  
     padding: 10px;
     color: white;
     border-radius: 21px;
-    top: 9px;
-    left: 7px;
+   
   }
 
   .porto:hover{
