--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,11 @@
 <div #joystickContainer class="joystick"></div>
-<div class="porto" routerLink="/portofolio">
- Go to Protofolio
+<div  class="box">
+    <div class="porto" routerLink="/portofolio">
+     Go to Protofolio
+    </div>
+
+    <div class="porto" routerLink="/game">
+        Go to Game RPG
+       </div>
 </div>
 <canvas #canvas></canvas>
