--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -7,5 +7,9 @@
     <div class="porto" routerLink="/game">
         Go to Game RPG
        </div>
+
+       <div class="porto" routerLink="/game-fps">
+        Go to Game FPS
+       </div>
 </div>
 <canvas #canvas></canvas>
