--- a/src/app/game-rpg/game-rpg.component.html
+++ b/src/app/game-rpg/game-rpg.component.html
@@ -1,4 +1,7 @@
 
 <div #joystickContainer class="joystick"></div>
+<div class="player-online">
+    Online {{totalUser}}
+</div>
 <div id="npc-character"></div>
 <canvas #canvas2></canvas>
