--- a/src/app/game-rpg/game-rpg.component.css
+++ b/src/app/game-rpg/game-rpg.component.css
@@ -3,7 +3,6 @@
     position: absolute !important;
     width: 100px;
     height: 100px;
-    touch-action: none !important;
     background: #ffffff26;
     border-radius: 50%;
   }
@@ -31,7 +30,7 @@
   }
 
   .nme{
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
   }
