--- a/src/app/game-rpg/game-rpg.component.html
+++ b/src/app/game-rpg/game-rpg.component.html
@@ -7,7 +7,9 @@
 </div>
 
 <div class="nme">
-    Ganti Nama <input type="text" [(ngModel)]="myName">
+    <button mat-raised-button (click)="openName()">Ganti Nama</button>
 </div>
 <div id="npc-character"></div>
+
+
 <canvas #canvas2></canvas>
