--- a/src/app/game-rpg/game-rpg.component.html
+++ b/src/app/game-rpg/game-rpg.component.html
@@ -1,12 +1,13 @@
 
-<div class="bx">
+
+<div class="bx z-10">
     <div #joystickContainer class="joystick"></div>
 </div>
-<div class="player-online">
+<div class="player-online z-10">
     Online {{totalUser}}
 </div>
 
-<div class="nme">
+<div class="nme z-10">
     <button mat-raised-button (click)="openName()">Ganti Nama</button>
 </div>
 <div id="npc-character"></div>
