--- a/src/app/portofolio/portofolio.component.html
+++ b/src/app/portofolio/portofolio.component.html
@@ -2,20 +2,28 @@
   <!-- Section 1: Welcome -->
   <section id="welcome" class="welcome-section">
     <h1>Welcome to My Portfolio</h1>
+    <p>by Eka Hersada</p>
     <div id="three-canvas-container"></div>
   </section>
 
   <!-- Section 2: About -->
   <section id="about" class="about-section">
-    <h2>About Me</h2>
-    <p>I'm a passionate developer with a love for creating interactive experiences.</p>
+    <h2>My Project Coba-coba</h2>
+    <div class="w-full justify-center items-center flex gap-4">
+      <button mat-raised-button  routerLink="/game"> Go to Game 3D RPG Online Multiplayer </button>
+      <button mat-raised-button  routerLink="/game-2d"> Go to Game 2D Online</button>
+      <button mat-raised-button  routerLink="/game-fps"> Go to Game FPS Online</button>
+      <button mat-raised-button  routerLink="/game-fps"> Go to Game FPS Online</button>
+    </div>
+
+    <p class="mt-[40px]">I'm a passionate developer with a love for creating interactive experiences.</p>
     
   </section>
 
   <!-- Section 3: Contact -->
   <section id="contact" class="contact-section">
     <h2>Contact Me</h2>
-    <p>Email: example&#64;example.com</p>
-    <p>Phone: +123 456 7890</p>
+    <p>Email: ekahersada&#64;gmail.com</p>
+    <!-- <p>Phone: +62 813 6388 3220</p> -->
   </section>
 </div>
