--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,9 @@ body {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.dg.ac{
+    position: absolute !important;
+    z-index: 1000 !important;
+}
+
