--- a/src/app/game-test/game-test.component.html
+++ b/src/app/game-test/game-test.component.html
@@ -1,1 +1,4 @@
+<div #joystickContainer class="joystick grid place-items-center">
+  <span class="opacity-50">MOVE</span>
+</div>
 <div #renderer2 class="renderer-container"></div>
