--- a/src/app/game-test/game-test.component.css
+++ b/src/app/game-test/game-test.component.css
@@ -4,3 +4,15 @@
     position: fixed;
     z-index: 0;
   }
+
+
+  .joystick{
+    bottom: 66px;
+    left: 18px;
+    position: absolute !important;
+    width: 150px;
+    height: 150px;
+    background: rgba(255, 255, 255, 0.149);
+    border-radius: 50%;
+    z-index: 1000;
+  }
