--- a/src/app/portofolio/portofolio.component.html
+++ b/src/app/portofolio/portofolio.component.html
@@ -9,19 +9,30 @@
   <!-- Section 2: About -->
   <section id="about" class="about-section">
 
-  <div class="data-about text-center">
-    
-    <h2>My Project Coba-coba</h2>
-    <div class="w-full justify-center items-center flex gap-4 mb-[40px]">
-      <button class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"  routerLink="/game">Game 3D RPG Online Multiplayer </button>
-      <button class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"  routerLink="/game-2d">Game 2D Online</button>
-      <button class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"  routerLink="/game-fps2">Game FPS</button>
-      <button class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"  routerLink="/game-fps">Game FPS Online</button>
+    <div class="data-about text-center">
+
+      <h2>My Project Coba-coba</h2>
+      <div class="w-full justify-center items-center flex gap-4 mb-[40px]">
+        <button
+          class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+          routerLink="/game">Game 3D RPG Online Multiplayer </button>
+        <button
+          class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+          routerLink="/game-2d">Game 2D Online</button>
+        <button
+          class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+          routerLink="/game-fps2">Game FPS</button>
+        <button
+          class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+          routerLink="/game-fps">Game FPS Online</button>
+        <button
+          class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+          routerLink="/game-new">Game NEW</button>
+      </div>
+
+      <p class="mt-[40px]">I'm a passionate developer with a love for creating interactive experiences.</p>
     </div>
 
-    <p class="mt-[40px]">I'm a passionate developer with a love for creating interactive experiences.</p>
-  </div>
-    
   </section>
 
   <!-- Section 3: Contact -->
