--- a/src/app/game-new-rpg/game-new-rpg.component.html
+++ b/src/app/game-new-rpg/game-new-rpg.component.html
@@ -1,1 +1,2 @@
-<canvas #rendererContainer2 class="renderer-container"></canvas>
+<div #container class="sections"></div>
+<div #rendererContainer2 class="renderer-container"></div>
