--- a/src/app/portofolio/portofolio.component.html
+++ b/src/app/portofolio/portofolio.component.html
@@ -37,8 +37,8 @@
 
   <!-- Section 3: Contact -->
   <section id="contact" class="contact-section">
-    <h2>Contact Me</h2>
-    <p>Email: ekahersada&#64;gmail.com</p>
+    <h2>Thankyou</h2>
+    <!-- <p>Email: ekahersada&#64;gmail.com</p> -->
     <!-- <p>Phone: +62 813 6388 3220</p> -->
   </section>
 </div>
