--- a/src/app/game-fps-new/game-fps-new.component.html
+++ b/src/app/game-fps-new/game-fps-new.component.html
@@ -5,3 +5,6 @@
     </div>
   </div>
 </div>
+<div #joystickContainer class="joystick grid place-items-center">
+  <span class="opacity-50">MOVE</span>
+</div>
