add ammo display to game-fps-new component with styling adjustments

--- a/src/app/game-fps-new/game-fps-new.component.html
+++ b/src/app/game-fps-new/game-fps-new.component.html
@@ -1,3 +1,4 @@
+<div class="bx-ammo fixed z-[1]">Ammo:{{ammoCount}}</div>
 <div #rendererContainer2 class="renderer-container relative flex justify-center items-center">
   <div class="absolute">
     <div class="size-2 bg-red-600 rounded-full">
