--- a/src/app/game-fps-new/game-fps-new.component.css
+++ b/src/app/game-fps-new/game-fps-new.component.css
@@ -15,3 +15,15 @@
     border-radius: 50%;
     z-index: 1000;
   }
+
+  .bx-ammo{
+    background: #ffffff;
+    padding: 20px;
+    font-size: 25px;
+    border-radius: 16px;
+    transform: rotateY(49deg);
+    transform: rotate3d(9, 6, 7, 349deg);
+    opacity: 0.6;
+    bottom: 50px;
+    left: 16%;
+  }
