--- a/src/app/portofolio/portofolio.component.html
+++ b/src/app/portofolio/portofolio.component.html
@@ -12,7 +12,7 @@
     <div class="data-about text-center">
 
       <h2>My Project Coba-coba</h2>
-      <div class="w-full justify-center items-center flex gap-4 mb-[40px]">
+      <div class="w-full justify-center items-center flex flex-col md:flex-row gap-4 mb-[40px]">
         <button
           class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
           routerLink="/game">Game 3D RPG Online Multiplayer </button>
@@ -22,9 +22,9 @@
         <button
           class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
           routerLink="/game-fps2">Game FPS</button>
-        <button
+        <!-- <button
           class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-          routerLink="/game-fps">Game FPS Online</button>
+          routerLink="/game-fps">Game FPS Online</button> -->
         <button
           class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
           routerLink="/game-new">Game NEW</button>
