add jump button and free camera toggle to game-research component; enhance lighting setup and NPC chase logic

--- a/src/app/game-research/game-research.component.html
+++ b/src/app/game-research/game-research.component.html
@@ -1,4 +1,9 @@
 <div #joystickContainer class="joystick grid place-items-center">
   <span class="opacity-50"></span>
 </div>
+<div class="bg-white bg-opacity-50 rounded-2xl bottom-0 right-2 p-4 fixed z-[2]" (click)="Jumpt()">Jump</div>
+<div class="bg-white bg-opacity-50 rounded-2xl top-0  p-4 fixed z-[2]" (click)="freeCamera = !freeCamera">{{freeCamera ?
+  'Fixed Camera' : 'Free Camera'}}</div>
+
+
 <div #rendererContainer2 class="renderer-container"></div>
