--- a/src/app/portofolio/portofolio.component.html
+++ b/src/app/portofolio/portofolio.component.html
@@ -31,6 +31,9 @@
         <button
           class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
           routerLink="/research">Game Research</button>
+        <button
+          class="rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+          routerLink="/game-grid">Game Grid</button>
       </div>
 
       <p class="mt-[40px]">I'm a passionate developer with a love for creating interactive experiences.</p>
